--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div>Slideshow</div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3909.0139081695015!2d104.88308359999999!3d11.5508598!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x310951add5e2cd81%3A0x171e0b69c7c6f7ba!2z4Z6i4Z6E4Z-S4Z6C4Z6A4Z624Z6a4Z6U4Z-J4Z624Z6f4Z664Z6a4Z-J4Z-C4Z6bIOGek-Geu-GemeGemOGeuuGemuGet-GegOGegOGemOGfkuGeluGeu-Geh-Getg!5e0!3m2!1skm!2skh!4v1752742976211!5m2!1skm!2skh" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 </html>
